# NariRaksha

./: .gitignore  AUDIT_REPORT.md  DATASET_DIAGNOSTICS.md  Dockerfile  README.md  TRAINING_READINESS_REPORT.md  pyproject.toml  requirements-colab.txt
benchmark/: benchmark.py
configs/: default.yaml  gemma.yaml  qwen.yaml  smollm.yaml
docs/: reproducibility.md
evaluation/: data_quality.py  error_analysis.py  evaluate.py
inference/: predict.py
knowledge_graph/: kg_generator.py
nariraksha/: __init__.py  data.py  data_ingestion.py  retrieval.py  synthetic_generation.py  taxonomy.py  translation.py
notebooks/: NariRaksha_Colab.ipynb
scripts/: colab_setup.py  publish_dataset.py  publish_model.py
training/: train.py
