[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nariraksha"
version = "0.1.0"
description = "NariRaksha: Multilingual women's safety reasoning dataset and small language model"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "NariRaksha AI Team", email = "contact@nariraksha.ai"}
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.29.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    "pydantic>=2.0.0",
    "indic-transliteration>=2.3.0",
    "sentencepiece>=0.2.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.4.0",
    "huggingface_hub>=0.22.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "networkx>=3.0.0",
    "langchain>=0.1.0",
    "openai>=1.14.0",
    "einops>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[tool.setuptools]
packages = ["nariraksha"]
